# Metal_AI

./: .dockerignore  .env.example  .gitignore  PRODUCT_MISSION.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/backend/: Dockerfile  alembic.ini
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_init.py  0002_feedback_learning_fields.py  (+3 more)
apps/backend/app/: audit.py  config.py  db.py  main.py  persistence_models.py  schemas.py  security.py
apps/frontend/: Dockerfile  package.json
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/components/: BackendStatus.tsx  ChatInput.tsx  ChatLayout.tsx  MessageBubble.tsx  Sidebar.tsx
apps/frontend/lib/: chat-types.ts
config/: company_rates.example.json
src/metal_calc/: __init__.py  cli.py  costing.py  exceptions.py  materials.py  models.py  operations.py  routing.py  time_estimation.py  validators.py  work_centers.py
src/metal_calc/ai/: extractor.py
src/metal_calc/data/: machine_rates_2025.py  routing_templates.py
src/metal_calc/db/: repository.py  schema.sql
src/metal_calc/engine/: __init__.py  calc_form.py  calculation.py  email_generator.py  material.py  rfq_intake.py  risk_rules.py  sales_card.py
src/metal_calc/knowledge/: __init__.py  baseline_updater.py  operation_taxonomy.py  operation_time_baselines.py  work_center_dictionary.py
src/metal_calc/ml/: __init__.py  similarity.py
src/metal_calc/models/: __init__.py  enums.py
tests/: test_ai_extractor.py  test_backend_app.py  test_calc_form.py  test_calculation.py  test_costing.py  test_costing_v1.py  test_domain_core.py  test_email_generator.py  test_golden_cases.py  test_historical_intel.py  test_machine_rates.py  test_nesting.py  test_repository.py  test_rfq_intake.py  test_risk_rules.py  test_routing_templates.py  test_sales_card.py  test_time_estimation.py
(+11 files in other folders)
