[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metal-calc"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
metal-calc = "metal_calc.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]
ai = ["anthropic>=0.40"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
