[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metal-calc"
version = "0.1.0"
requires-python = ">=3.10"
# metal_calc library has no external runtime dependencies — stdlib only.
# Backend runtime dependencies are listed in the [backend] extras group below.
dependencies = []

[project.scripts]
metal-calc = "metal_calc.cli:main"

[project.optional-dependencies]
backend = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13",
    "pypdf>=4.0",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.1",
]
ml = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
ai = ["anthropic>=0.40"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
